--- a/bin/summary.Rmd
+++ b/bin/summary.Rmd
@@ -9,6 +9,8 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 library("ggplot2")
 library("stringr")
+library(dplyr)
+library(hrbrthemes)
 ```
 
 ```{r}
@@ -27,7 +29,6 @@ get_ratios <- function(list_entry) {
 
 ```{r}
 file_names <- list.files("tsv/",pattern = "*.tsv", full.names = TRUE)
-df_list <- lapply(file_names, read_tsv)
 main_df <- do.call(rbind,lapply(file_names,read.csv, sep = "\t", header = TRUE))
 main_df$chr <- mapply(str_match, main_df$var_id, pattern = ".*chr[0-9]{1,2}")
 ```
@@ -41,7 +42,7 @@ boxplots <- ggplot(main_df, aes(x=chr, y=match_ratio, fill=chr)) +
 boxplots <- boxplots + geom_hline(yintercept = ratio_mean, linetype="solid", 
                 color = "blue", size=1) + ggtitle("GT Overlap between 1,079,268 Variants from 147 samples (Before VCF filter).\n")
 ggsave(
-  "overlap1.png",
+  "figures/overlap1.png",
   plot = last_plot(),
   scale = 1,
   width = 12,
@@ -49,7 +50,7 @@ ggsave(
   dpi = 300
 )
 ```
-
+  
 ```{r}
 ratios_c <- seq(0.01, 1, by=0.01)
 coverage <- sapply(ratios_c, function(x) nrow(main_df[main_df$match_ratio >= x,]) / nrow(main_df))
@@ -73,7 +74,7 @@ boxplots <- boxplots + geom_hline(yintercept = ratio_mean, linetype="solid",
                 color = "blue", size=1, outlier.shape = NA) + ggtitle("nhoma_diff.\n") +
             scale_y_log10()
 ggsave(
-  "nhoma_diff.png",
+  "figures/nhoma_diff.png",
   plot = last_plot(),
   scale = 1,
   width = 12,
@@ -88,7 +89,7 @@ boxplots <- ggplot(main_df, aes(x=chr, y=nrhets_diff, fill=chr)) +
 boxplots <- boxplots + geom_hline(yintercept = ratio_mean, linetype="solid", 
                 color = "blue", size=1) + ggtitle("nrhets_diff\n")
 ggsave(
-  "nrhets_diff.png",
+  "figures/nrhets_diff.png",
   plot = last_plot(),
   scale = 1,
   width = 12,
@@ -103,7 +104,7 @@ boxplots <- ggplot(main_df, aes(x=chr, y=nrhomb_diff, fill=chr)) +
 boxplots <- boxplots + geom_hline(yintercept = ratio_mean, linetype="solid", 
                 color = "blue", size=1) + ggtitle("nrhomb_diff\n")
 ggsave(
-  "nrhomb_diff.png",
+  "figures/nrhomb_diff.png",
   plot = last_plot(),
   scale = 1,
   width = 12,
@@ -119,15 +120,57 @@ s_cor <- cor(main_df$match_ratio, main_df$s_corr, use = "complete.obs")
 
 ```{r}
 # Hexbin chart with default option
-ggplot(main_df, aes(x=p_corr, y=match_ratio) ) +
-  geom_hex() +
-  theme_bw()
+#ggplot(main_df, aes(x=p_corr, y=match_ratio) ) +
+  #geom_hex() +
+  #theme_bw()
  
 # Bin size control + color palette
-ggplot(main_df, aes(x=p_corr, y=match_ratio) ) +
-  geom_hex(bins = 100) +
-  scale_fill_continuous(type = "viridis") +
-  theme_bw()
+#ggplot(main_df, aes(x=p_corr, y=match_ratio) ) +
+  #geom_hex(bins = 100) +
+  #scale_fill_continuous(type = "viridis") +
+  #theme_bw()
+```
+```{r}
+main_df$alt_freq_i <- ifelse(main_df$maf_type_i == "ALT", main_df$maf_i, 1 - main_df$maf_i)
+main_df$alt_freq_r <- ifelse(main_df$maf_type_r == "ALT", main_df$maf_r, 1 - main_df$maf_r)
+main_df$ref_freq_i <- 1 - main_df$alt_freq_i
+main_df$ref_freq_r <- 1 - main_df$alt_freq_r 
+
+# basic scatterplot
+ggplot(main_df, aes(x=alt_freq_i, y=alt_freq_r)) +
+    geom_point(alpha = 0.05)
+
+cor(main_df$alt_freq_i, main_df$alt_freq_r)
+
+ggplot(main_df, aes(x=ref_freq_i, y=ref_freq_r)) +
+    geom_point(alpha = 0.05)
+
+cor(main_df$ref_freq_i, main_df$ref_freq_r)
+```
+
+```{r}
+main_df$call_rate_i <- (1 - main_df$missing_i / main_df$gt_total)
+main_df$call_rate_r <- (1 - main_df$missing_r / main_df$gt_total)
+
+cr50df <- main_df[(main_df$call_rate_i >= 0.5) & (main_df$call_rate_i >= 0.5),]
+
+# basic scatterplot
+ggplot(cr50df, aes(x=alt_freq_i, y=alt_freq_r)) +
+    geom_point(alpha = 0.05)
+
+cor(cr50df$alt_freq_i, cr50df$alt_freq_r)
+
+ggplot(cr50df, aes(x=ref_freq_i, y=ref_freq_r)) +
+    geom_point(alpha = 0.05)
+
+cor(cr50df$ref_freq_i, cr50df$ref_freq_r)
+```
+
+```{r}
+ggplot(main_df, aes(x=-log10(hwe_i), y=-log10(hwe_r))) +
+    geom_point(alpha = 0.05)
+
+cor(main_df$hwe_i, main_df$hwe_r)
 ```
 
 
